--- a/index.html
+++ b/index.html
@@ -171,7 +171,12 @@
                             своих лет, чувствую себя здоровым и подвижным, знаю как сберечь молодость и здоровье на более длительный период жизни. За время работы фитнес тренером я заметил, что спорт благотворно воздействует на эмоциональное состояние,
                             состояние кожи, нормализует давление и уровень сахара в крови, на пищеварение, на осанку, на походку, на легкость в движениях, уверенность в собственных силах и привлекательность для окружающих. </p>
                     </div>
-
+                
+        <div class="zal">
+            <img class="photo-zal1" src="img/00334003_2.jpg" alt="персональный тренер Киев 0638587378">
+            <img class="photo-zal3" src="img/crop_78782229_YMyp.jpg" alt="персональный тренер Киев 0638587378">
+            <img class="photo-zal2" src="img/unnamed 700х700.jpg" alt="персональный тренер Киев 0638587378">
+        </div>
                     
 
                     <p>Учтите, занимаясь спортом Вы сохраняете здоровье, молодость, подвижность и внешнюю привлекательность – это те ресурсы которые Вы никогда не сможете купить за деньги, поэтому чем раньше Вы начнете – тем больше выиграете! </p>
