--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                     </div>
                 
         <div class="zal">
-            <img class="photo-zal1" src="img/00334003_2.jpg" alt="персональный тренер Киев 0638587378">
-            <img class="photo-zal3" src="img/crop_78782229_YMyp.jpg" alt="персональный тренер Киев 0638587378">
-            <img class="photo-zal2" src="img/unnamed 700х700.jpg" alt="персональный тренер Киев 0638587378">
+            <img class="photo-I_1" src="img/00334003_2.jpg" alt="персональный тренер Киев 0638587378">
+            <img class="photo-I_2" src="img/crop_78782229_YMyp.jpg" alt="персональный тренер Киев 0638587378">
+            <img class="photo-I_3" src="img/unnamed 700х700.jpg" alt="персональный тренер Киев 0638587378">
         </div>
                     
 
