--- a/women.html
+++ b/women.html
@@ -148,8 +148,8 @@
                     <br> Девушки в результате тренировок хотят стать стройными и подтянутыми.<br> Основной акцент в тренинге обычно делается на мускулатуру ног, ягодиц, уменьшение
                     талии и создание красивого, женственного телосложения.<br> К тому же и женский организм сильно отличается от мужского. <br> Все эти факторы необходимо учитывать в построении тренировочной программы чтоб тренировки были эффективными,
                     а не вредили самочувствию.<br> При регулярном, правильном тренинге уже через пару месяцев Ваше тело будет очень нравиться Вам самим, не говоря уже о мужчинах.  
-                    <br>
-            Стоимость тренировки с тренером в зале 400грн (стоимость посещения зала см. на стр <a href="contacts.html"></i>Контакты</a>)
+                    </p>
+           <p> Стоимость тренировки с тренером в зале 400грн (стоимость посещения зала см. на стр <a href="contacts.html"></i>Контакты</a>)
         </p>
 
 
