--- a/women.html
+++ b/women.html
@@ -149,7 +149,7 @@
                     талии и создание красивого, женственного телосложения.<br> К тому же и женский организм сильно отличается от мужского. <br> Все эти факторы необходимо учитывать в построении тренировочной программы чтоб тренировки были эффективными,
                     а не вредили самочувствию.<br> При регулярном, правильном тренинге уже через пару месяцев Ваше тело будет очень нравиться Вам самим, не говоря уже о мужчинах.  
                     </p>
-           <p> Стоимость тренировки с тренером в зале 400грн (стоимость посещения зала см. на стр <a href="contacts.html"></i>Контакты</a>)
+           <p> Стоимость тренировки с тренером в зале 400грн (условия посещения зала см. на стр <a href="contacts.html"></i>Контакты</a>)
         </p>
 
 
