--- a/women.html
+++ b/women.html
@@ -131,8 +131,7 @@
 
                     <h2>Зачем девушкам силовые тренировки?</h2>
                     Девушки в результате тренировок хотят стать стройными и подтянутыми. Основной акцент в тренинге обычно делается на мускулатуру ног, ягодиц, уменьшение талии и создание красивого, женственного телосложения. К тому же и женский организм сильно отличается
-                    от мужского. Все эти факторы необходимо учитывать в построении тренировочной программы чтоб тренировки были эффективными, а не вредили самочувствию. При регулярном, правильном тренинге уже через пару месяцев Ваше тело будет очень нравиться
-                    Вам самим, не говоря уже мужчинах.
+                    от мужского. Все эти факторы необходимо учитывать в построении тренировочной программы чтоб тренировки были эффективными, а не вредили самочувствию. 
 
 
                     <img class="photo-home-train" src="img/w.jpg" alt="персональный тренер Киев 0638587378"> Чаще всего, женщины более выносливые, и времени на восстановление им нужно меньше, но настроение и работоспособность сильно меняется в течении
@@ -145,10 +144,18 @@
                     жизни – это не только зал, это еще и все остальное время до и после тренировки.<br> Многие девушки предпочитают работать, в основном, с тренажерами, пренебрегая свободными весами. Считается, что свободные веса – это что-то чисто мужское.<br>                    Тренажеры – это изолированное воздействие на мышцы, они нужны для шлифовки и доработки, когда уже есть база, а база строится именно в зоне свободных весов. <br> Тренажеры – это всегда легче и менее энергозатратно, но для гармоничного
                     развития всего тела нужно использовать многосуставные сложные упражнения.<br> 
                     Я считаю, что успеха достигнет лишь тот кто сделает свой путь достаточно увлекательным, чтобы итти по нему бесконечно долго. Тренировки дожны быть в радость!<br>    
-                    <br> Девушки в результате тренировок хотят стать стройными и подтянутыми.<br> Основной акцент в тренинге обычно делается на мускулатуру ног, ягодиц, уменьшение
-                    талии и создание красивого, женственного телосложения.<br> К тому же и женский организм сильно отличается от мужского. <br> Все эти факторы необходимо учитывать в построении тренировочной программы чтоб тренировки были эффективными,
-                    а не вредили самочувствию.<br> При регулярном, правильном тренинге уже через пару месяцев Ваше тело будет очень нравиться Вам самим, не говоря уже о мужчинах.  
+                    <br>  При регулярном, правильном тренинге уже через пару месяцев Ваше тело будет очень нравиться Вам самим, не говоря уже о мужчинах.  
                     </p>
+            <p><h3>Чем я могу быть Вам полезен?</h3>
+        
+            <ul>
+                    <li>-Комплексное построение фигуры </li>
+                    <li>-Корректировка плана питания</li>
+                    <li>-Снижение веса, сжигание подкожного жира, сушка</li>
+                    <li>-Акцент на тренировку ног и ягодиц</li>
+                    <li>-Увеличение выносливости</li>
+                    <li>-Реабилитационный тренинг при травмах суставов или позвоночника</li>
+                </ul>    </p> 
            <p> Стоимость тренировки с тренером в зале 400грн (условия посещения зала см. на стр <a href="contacts.html"></i>Контакты</a>)
         </p>
 
