--- a/women.html
+++ b/women.html
@@ -149,13 +149,14 @@
             <p><h3>Чем я могу быть Вам полезен?</h3>
         
             <ul>
-                    <li>-Комплексное построение фигуры </li>
+                    <li>-Комплексное построение фигуры. Сделаем фигуру такой как Вы хотие! </li>
                     <li>-Корректировка плана питания</li>
                     <li>-Снижение веса, сжигание подкожного жира, сушка</li>
                     <li>-Акцент на тренировку ног и ягодиц</li>
                     <li>-Увеличение выносливости</li>
                     <li>-Реабилитационный тренинг при травмах суставов или позвоночника</li>
-                </ul>    </p> 
+                </ul>    
+            </p> 
            <p> Стоимость тренировки с тренером в зале 400грн (условия посещения зала см. на стр <a href="contacts.html"></i>Контакты</a>)
         </p>
 
