--- a/women.html
+++ b/women.html
@@ -158,6 +158,7 @@
                 </ul>    
             </p> 
            <p> Стоимость тренировки с тренером в зале 400грн (условия посещения зала см. на стр <a href="contacts.html"></i>Контакты</a>)
+                Возможно тренироваться и получать результат в домашних условиях. <a href="pt.home.html">Тренер на дом</a>
         </p>
 
 
