--- a/pt.home.html
+++ b/pt.home.html
@@ -155,11 +155,8 @@
                     Если Вы хотите снизить лишний вес, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях. 
                     Желаете снизить вес - услуга домашний тренер для похудения особенно актуальна, послольку для достижения такой цели важно не только заниматься, наставник сможет ознакомиться с Вашей средой обитания и тактично внести коррективы в Ваш образ жизни, 
                     что сделает процесс похудения более легким и быстрым, позволит сохранить достигнутые результаты надолго.
-                    <p>Стоимость тренировки на дому зависит от расстояния которое прийдется преодолеть тренеру, чтобы добраться к Вам, 
-                        и в исключительных случаях может отличаться от указанной ниже<br>
-                        по Киеву 500грн/час/чел<br>
+                    <p>Стоимость тренировки на дому по Киеву 500грн/час/чел<br>
                         Пригород Киева 700грн/час/чел
-
 
                 </p>
             </div>
