--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <img class="photo-I_2" src="img/crop_78782229_YMyp.jpg" alt="персональный тренер Киев 0638587378">
             <img class="photo-I_3" src="img/unnamed 700х700.jpg" alt="персональный тренер Киев 0638587378">
         </div>
-                <p>Узнать условия тренировок Вы можете на стр <a href="contacts.html"></i>Контакты</a></p>
+                <p>Узнать условия тренировок с тренером Вы можете на стр <a href="contacts.html"></i>Контакты</a></p>
                     
 
                     <p>Учтите, занимаясь спортом Вы сохраняете здоровье, молодость, подвижность и внешнюю привлекательность – это те ресурсы которые Вы никогда не сможете купить за деньги, поэтому чем раньше Вы начнете – тем больше выиграете! </p>
