--- a/men.html
+++ b/men.html
@@ -164,7 +164,7 @@
                     <li>-Подготовка к соревнованиям по бодибилдингу</li>
                     <li>-Реабилитационный тренинг при травмах суставов или позвоночника</li>
                 </ul>      
-        Стоимость тренировки с тренером в зале 400грн (условия посещения зала см. на стр <a href="contacts.html"></i>Контакты</a>)
+        Условия тренировок и посещения зала см. на стр <a href="contacts.html"></i>Контакты</a>)
         </p>
                     
 
