--- a/women.html
+++ b/women.html
@@ -157,7 +157,7 @@
                     <li>-Реабилитационный тренинг при травмах суставов или позвоночника</li>
                 </ul>    
             </p> 
-           <p> Стоимость тренировки с тренером в зале 400грн (условия посещения зала см. на стр <a href="contacts.html"></i>Контакты</a>)<br>
+           <p> Условия тренировок и посещения зала см. на стр <a href="contacts.html"></i>Контакты</a>)<br>
                 Возможно тренироваться и получать результат в домашних условиях. <a href="pt.home.html">Тренер на дом</a>
         </p>
 
