--- a/men.html
+++ b/men.html
@@ -136,13 +136,13 @@
     Представителям it профессий например, просто необходима дополнительная физическая активность. В результате "жизни сидя" снижается мышечный тонус, появляется сутулость, замедляются все обменные процессы в теле, ухудшается аппетит, давление и т. д.</p>
  
      <p>Спорт меняет характер, прививает дисциплинированность, учит относиться к жизни позитивно. <br>
-Кстати, менять себя как личность - это реально. 
+Кстати, менять качества своего характера - это реально. 
 <ul>
     <li>А Вы уже знаете себя?</li> 
     <li>Кто Вы? </li>
     <li>Что за сущность живет внутри Вас? </li>
     <li>Как она будет вести себя в стрессовой ситуации? </li>
-    <li>Ваши поступки продиктованы силой или слабостью?</li>
+    
    </ul>
                 
                 <div class="video-container">
