--- a/women.html
+++ b/women.html
@@ -150,6 +150,7 @@
         
             <ul>
                     <li>-Комплексное построение фигуры. Сделаем фигуру такой как Вы хотие! </li>
+                    <li>-Учет особенностей женского организма</li>
                     <li>-Корректировка плана питания</li>
                     <li>-Снижение веса, сжигание подкожного жира, сушка</li>
                     <li>-Акцент на тренировку ног и ягодиц</li>
