--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <li><a href="men.html">Мужской тренинг</a></li>
                             <li><a href="women.html">Тренировки для девушек</a></li>
                             <li><a href="pt.home.html">Тренер на дом</a></li>
-                            <li><a href="functional.html">Функциональный тренинг</a></li>
+                            <li><a href="lose weight.html">Похудеть</a></li>
                             <li><a href="group">Групповые тренировки</a></li>
                         </ul>
                     </li>
