--- a/contacts.html
+++ b/contacts.html
@@ -131,6 +131,8 @@
         <div class="kdb">
 
             <div class="adres">
+                <p>Вы находитесь на сайте тренера. <br>
+                    Если Вы хотите привести свое тело в форму - я готов помочь Вам начать и дойти до желаемого результата</p>
                                <p>Тренирую по адресу: <br>Фитнес-клуб inter Fit<br> Метро Лукьяновка<br> Адрес: Довнар-Запольского 9/10<br> График работы :<br> пн-пт с 7- 22<br> сб-вс с 9-21</p>
                 <p>Стоимость разовой тренировки с тренером 400грн<br> Абонемент в зал оплачивается отдельно <br> Стоимость месячного абонемента составляет 599грн с 7 до 17:00 и 699грн на полный день <br> При первой тренировке возможно бесплатное разовое посещение зала
                     по предварительному согласованию</p>
