--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Спортивный блог</title>
+    <title>Тренировки с персональным фитнес тренером</title>
     <link href="block.css" rel="stylesheet" />
 </head>
 
@@ -128,10 +128,16 @@
                 <p>
 
 
-                    <h2>Зачем вообще заниматься спортом?</h2>
+                    <h2>Зачем вообще заниматься своим телом?</h2>
 
-                    <p>Каждый живой организм, человека в том числе работает по системе клеточного обмена. Все что в него попадает рано или поздно из него выходит. Нарушение клеточного обмена, а именно: нехватка питательных веществ и выведение продуктов обмена
-                        ведёт к ухудшению работоспособности организма. Появляется вялость, усталость, начинают проявляться признаки старения. Как же можно повлиять на ситуацию? Как оставаться молодым, подвижным и хорошо выглядеть не зависимо от возраста?</p>
+                    <p>Все органы и ткани человека, как и любого другого живого существа и растения состоят из клеток. В этих клетках постоянно происходят какие-то процессы. 
+                        Что-то обновляется, какие-то элементы отработали свой цыкл и разрушаются, на смену им  образуются другие элементы. 
+                        Таким образом, каждая клетка в теле нуждается в своевременном выведении продуктов распада и в доставке новых макро и микропитательных веществ и кислорода.
+                        Если продукты распада клеточной жизнедеятельности не выводятся и вовремя не доставляются питательные вещества занчит нарушена транспортная функция (ее в нашем теле выполняет сердечно-сосудистая и лимфатическая системы)
+                                            
+                        Таким образом нарушение клеточного обмена: нехватка питательных веществ и выведение продуктов обмена
+                        ведёт к ухудшению работоспособности и старению организма. Появляется вялость, усталость, головные боли, головокружения, слабость, лишние подкожно-жировые отложения, сутулость, апатия, депрессия, недовольство собой. <br>
+                        Как же можно повлиять на ситуацию? Как оставаться молодым, подвижным и хорошо выглядеть не зависимо от возраста?</p>
                     <ul>
                         <li>
                             1. Важно следить, чтоб тело получало нужное количество питательных веществ.</li>
@@ -142,12 +148,12 @@
                     <p>Соответственно, для противодействия старению нужно разнообразно питаться и ежедневно активно двигаться. Движение является профилактикой и лекарством для большинства заболеваний. Благодаря движению можно мощно воздействовать на настроение
                         и жизненный настрой вцелом!</p>
 
-                    <h2>Можно ли сохранить молодость?</h2>
+                    <h2>Спорт - гигиена тела!</h2>
 
                     <p>С начала ХХI века понятие "фитнес" входит в сознание людей как необходимый вид активности ведущий к здоровью, развитию подвижности и сохранению молодости! <br> Спорт стал общедоступным. Теперь им занимаются не только школьники, учителя
-                        физкультуры и профессиональные спортсмены. Это неотъемлемая сфера жизни каждого человека который понимает, что С ВОЗРАСТОМ ЖИТЬ ХОЧЕТСЯ НЕ МЕНЬШЕ. Теперь можно помогать, влиять на качество жизни окружающих, всё становится доступнее,
-                        жизнь комфортнее, возможностей больше. Теперь, пользуясь новыми возможностями хочется насладиться жизнью в новых красках и ТУТ СТАНОВИТСЯ ОЧЕНЬ ЖАЛЬ что молодость заканчивается. А ведь здоровье и молодость не купишь! Берегите свою
-                        молодость, красоту и здоровье!<br> Уделяйте время своему телу. Ведь можно сохранить здоровье, подвижность, сексуальность, энергию практически до старости и в течении жизни получать удовольствие сохраняя активность доступную только
+                        физкультуры и профессиональные спортсмены. Это неотъемлемая сфера жизни каждого человека который понимает, что С ВОЗРАСТОМ ЖИТЬ ХОЧЕТСЯ НЕ МЕНЬШЕ. Теперь, человека достигший успеха во всех сферах, но потерявший здоровье не называют успешным.  
+                        Всё становится доступнее, жизнь комфортнее, возможностей больше. Пользуясь новыми возможностями хочется насладиться жизнью в новых красках и ТУТ СТАНОВИТСЯ ОЧЕНЬ ЖАЛЬ что молодость заканчивается. А ведь здоровье и молодость не купишь! 
+                        Берегите свою молодость, красоту и здоровье!<br> Уделяйте время своему телу. Ведь можно сохранить здоровье, подвижность, сексуальность, энергию практически до старости и в течении жизни получать удовольствие сохраняя активность доступную только
                         молодым!
                     </p>
                     <br>
