--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                     <h2>Зачем вообще заниматься своим телом?</h2>
 
-                    <p>Все органы и ткани человека, как и любого другого живого существа и растения состоят из клеток. В этих клетках постоянно происходят какие-то процессы. 
+                    <p>Все органы и ткани человека, как и любого другого живого существа состоят из клеток. В этих клетках постоянно происходят какие-то процессы. 
                         Что-то обновляется, какие-то элементы отработали свой цыкл и разрушаются, на смену им  образуются другие элементы. 
                         Таким образом, каждая клетка в теле нуждается в своевременном выведении продуктов распада и в доставке новых макро и микропитательных веществ и кислорода.
                         Если продукты распада клеточной жизнедеятельности не выводятся и вовремя не доставляются питательные вещества занчит нарушена транспортная функция (ее в нашем теле выполняет сердечно-сосудистая и лимфатическая системы)
