--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <p>Узнать условия тренировок с тренером Вы можете на стр <a href="contacts.html"></i>Контакты</a></p>
                     
 
-                    <p>Учтите, занимаясь спортом Вы сохраняете здоровье, молодость, подвижность и внешнюю привлекательность – это те ресурсы которые Вы никогда не сможете купить за деньги, поэтому чем раньше Вы начнете – тем больше выиграете! </p>
+                    Учтите, занимаясь спортом Вы сохраняете здоровье, молодость, подвижность и внешнюю привлекательность – это те ресурсы которые Вы никогда не сможете купить за деньги, поэтому чем раньше Вы начнете – тем больше выиграете! 
                 </p>
             </div>
         </div>
