--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                         физкультуры и профессиональные спортсмены. Это неотъемлемая сфера жизни каждого человека который понимает, что С ВОЗРАСТОМ ЖИТЬ ХОЧЕТСЯ НЕ МЕНЬШЕ. Теперь, человека достигший успеха во всех сферах, но потерявший здоровье не называют успешным.  
                         Всё становится доступнее, жизнь комфортнее, возможностей больше. Пользуясь новыми возможностями хочется насладиться жизнью в новых красках и ТУТ СТАНОВИТСЯ ОЧЕНЬ ЖАЛЬ что молодость заканчивается. А ведь здоровье и молодость не купишь! 
                         Берегите свою молодость, красоту и здоровье!<br> Уделяйте время своему телу. Ведь можно сохранить здоровье, подвижность, сексуальность, энергию практически до старости и в течении жизни получать удовольствие сохраняя активность доступную только
-                        молодым!<br>
-                        Важно понять, спорт - это занятие для целеустремлённых и волевых людей, которые при трудностях
+                        молодым!<br></p>
+                       <p> Важно понять, спорт - это занятие для целеустремлённых и волевых людей, которые при трудностях
                             идут на все что бы решить их, а не бросаются в рюмку или на кусок торта, в целях получить свою порцию удовольствия. Поймите, если Вам не нравится Ваша жизнь, если Вам не нравится Ваша внешность – это сигнал к действию! Примите
                             вызов и сделайте первый шаг – придите в зал. Развивайте в себе жажду перемен. Научитесь терпеть, просто ждать и верить в результат! Тело будет сопротивляться, оно привыкло валяться на диване или сидеть в ресторане, но Ваша
                             задача упорно двигаться вперёд! Когда пройдёт первый месяц, Вы увидите свои первые изменения, тело начнёт поддаваться Вашим усилиям и терпению, это заметят друзья и родные. Когда пройдёт год, Вы просто не будете понимать, как
