--- a/lose weight.html
+++ b/lose weight.html
@@ -134,17 +134,17 @@
                     <p>Похудение - это комплекс мер по изменению образа жизни. <br> Если Вы верите в существование "волшебного средства", приняв которое можно быстро похудеть - Вы заблуждаетесь и собираетесь пойти по ложному пути. <br>
                         <ul>
                             <li>1. В правильном питании стоит учитывать "Режим питания" и "Рацион питания".
-                                <ol> На мой взгляд режим питания важнее.</ol>
-                                <ol>Если в течении дня Вы недоедаете - то съедите суточную норму вечером или ночью!</ol>
-                                <ol> Необходимо кушать 5 раз в день с промежутками 3 часа между приемами пищи.</ol>
-                                <ol> Тело начинает запасать калории в случае нерегулярного питания!</ol>
+                                <ol> -На мой взгляд режим питания важнее.</ol>
+                                <ol> -Если в течении дня Вы недоедаете - то съедите суточную норму вечером или ночью!</ol>
+                                <ol> -Необходимо кушать 5 раз в день с промежутками 3 часа между приемами пищи.</ol>
+                                <ol> -Тело начинает запасать калории в случае нерегулярного питания!</ol>
                                 <li>2. 95% подкожного жира появляется от углеводов, а не от жиров. Углеводы бывают быстро усваиваемые и медленно усваиваемые. Необходимо исключить быстроусваиваемые:
-                                    <ol>сахар</ol>
-                                    <ol>мед</ol>
-                                    <ol>сладости</ol>
-                                    <ol>хлеб</ol>
-                                    <ol>быстроусваиваемые сорта риса</ol>
-                                    <ol>картофель</ol>
+                                    <ol>-сахар</ol>
+                                    <ol>-мед</ol>
+                                    <ol>-сладости</ol>
+                                    <ol>-хлеб</ol>
+                                    <ol>-быстроусваиваемые сорта риса</ol>
+                                    <ol>-картофель</ol>
                                 </li>
                                 <li>3. Существует четкая взаимосвязь между питанием и подвижностью. Есть правила, следуя которым Вы обязательно похудеете. <br> Вот они:
                                     <ol>- Если Вы тратите больше калорий чем потребляете - Вы будете худеть!</ol>
