--- a/lose weight.html
+++ b/lose weight.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Спортивный блог</title>
+    <title>Как похудеть</title>
     <link href="block.css" rel="stylesheet" />
 </head>
 
