--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         Как же можно повлиять на ситуацию? Как оставаться молодым, подвижным и хорошо выглядеть не зависимо от возраста?</p>
                     <ul>
                         <li>
-                            1. Важно следить, чтоб тело получало нужное количество питательных веществ.</li>
+                            1. Важно следить чтоб тело получало нужное количество питательных веществ.</li>
                         <li>
                             2. Поддерживать транспортную функцию, чтоб питательные вещества и кислород были вовремя доставлены к месту назначения, а продукты распада выводились из тела прежде чем своим присутствием начнут мешать жизнедеятельности.</li>
                     </ul>
