--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <h2>Спорт - гигиена тела!</h2>
 
                     <p>С начала ХХI века понятие "фитнес" входит в сознание людей как необходимый вид активности ведущий к здоровью, развитию подвижности и сохранению молодости! <br> Спорт стал общедоступным. Теперь им занимаются не только школьники, учителя
-                        физкультуры и профессиональные спортсмены. Это неотъемлемая сфера жизни каждого человека который понимает, что С ВОЗРАСТОМ ЖИТЬ ХОЧЕТСЯ НЕ МЕНЬШЕ. Теперь, человека достигшего успеха во всех сферах, но потерявший здоровье не называют успешным.  
+                        физкультуры и профессиональные спортсмены. Это неотъемлемая сфера жизни каждого человека который понимает, что С ВОЗРАСТОМ ЖИТЬ ХОЧЕТСЯ НЕ МЕНЬШЕ. Теперь, человека достигшего успеха во всех сферах, но потерявшего здоровье не называют успешным.  
                         Всё становится доступнее, жизнь комфортнее, возможностей больше. Пользуясь новыми возможностями хочется насладиться жизнью в новых красках и ТУТ СТАНОВИТСЯ ОЧЕНЬ ЖАЛЬ что молодость заканчивается. А ведь здоровье и молодость не купишь! 
                         Берегите свою молодость, красоту и здоровье!<br> Уделяйте время своему телу. Ведь можно сохранить здоровье, подвижность, сексуальность, энергию практически до старости и в течении жизни получать удовольствие сохраняя активность доступную только
                         молодым!<br></p>
