--- a/contacts.html
+++ b/contacts.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Спортивный блог</title>
+    <title>Фитнес клуб рядом</title>
     <link href="block.css" rel="stylesheet" />
 </head>
 
