--- a/women.html
+++ b/women.html
@@ -5,7 +5,7 @@
     <meta name=”robots” content=”noindex, follow”>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Спортивный блог</title>
+    <title>Как тренироваться девушке</title>
     <link href="block.css" rel="stylesheet" />
 </head>
 
