--- a/TRX.html
+++ b/TRX.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Тренировки на TRX тренажере</title>
+    <title>Тренировки на TRX</title>
     <link href="block.css" rel="stylesheet" />
 </head>
 
