--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
 
     <div id="content">
+        <div class="box-container">
         <div class="coach d-flex justify-content-around">
             <img class="photo" src="img/4m.png" alt="персональный тренер Киев 0638587378">
             <!-- TODO after before pseudo elements -->
