--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
                         <div class="myself">
                             <h3>О себе:</h3>
-                            <p>Меня зовут Аркадий. Я занимаюсь спортом уже около 28-лет, а начал работать личным тренером в 2005м году, сразу после получения диплома НТУУ КПИ «специалист по физической реабилитации». В моей тренерской карьере были перерывы
+                            <p>Меня зовут Аркадий. Я занимаюсь спортом уже около 28-лет, а предоставляю услуги персонального фитнес тренера с 2005 года, сразу после получения диплома НТУУ КПИ «специалист по физической реабилитации». В моей тренерской карьере были перерывы
                                 связанные с переездами, травмами и даже профессиональным выгоранием, но я остаюсь и останусь в этой профессии потому что люблю процесс тренировок, общение с людьми разных профессий и жизненных взглядов, мне нравится что
                                 я выгляжу моложе своих лет, чувствую себя здоровым и подвижным, знаю как сберечь молодость и здоровье на более длительный период жизни. За время работы фитнес тренером я заметил, что спорт благотворно воздействует на эмоциональное
                                 состояние, состояние кожи, нормализует давление и уровень сахара в крови, на пищеварение, на осанку, на походку, на легкость в движениях, уверенность в собственных силах и привлекательность для окружающих. </p>
