--- a/index.html
+++ b/index.html
@@ -155,17 +155,29 @@
                             <h1>Зачем нужен тренер и как выбрать тренера ?</h1>
 
                             <p>
-                                <ul>
+
+                                Выбирая тренера - выбираешь себе путь в спорте. Один тренер приведет к желаемым результатам, а другой может испортить состояние здоровья. Как отличить специалиста от диллетанта?
+                                <ol>
                                     <li>
-                                        Тренер это не просто человек, который ходит и считает количество или просто контролирует технику – тренер это мотиватор! Задача тренера сделать так, чтобы каждый человек который приходит к нему на тренировку переходил в особое состояние драйва и энергии,
-                                        которая увлекает его и физические нагрузки преодолевается с удовольствием и без труда. Тренер должен быть человеком передающим позитивную энергетику которая настолько сильна, чтобы заряжать позитивом подопечных.
-                                        Он должен быть энергетической пилюлей в момент плохого настроения, апатии, потери веры, после встречи с которым заряжаешься энергией для преодоления жизненных препятствий. А целью тренировок может быть эмоциональная
-                                        накрутка, тренировка качеств характера, подготовка себя к какому-то действию или приобретения внутреннего состояния решительности. <br>
+                                        Наблюдайте, как тренер проводит тренировки с другими людьми. На что обратить внимание:
+                                        <ul>
+                                            <li>-Тренер больше уделяет внимание своему телефону или своему клиенту?</li>
+                                            <li>-Уделяет ли внимание технике выполнения упражнений? <br> Иногда ошибки видны даже не имеющим отношение к спорту людям. См. видео</li>
+                                    </li>
+                                    </ul>
+                                    <li>Учитывайте, занимается ли тренер сам или нет, и если да, то каким спортом. Смотрите на его достижения. Поймите, скорее всего Ваш тренер будет вести Вас в том же направлении куда двигается сам. Если он сам не похож на
+                                        спортсмена, то мало вероятно что Вы будете выгледеть спортивно.</li>
+                                    <li>
+                                        Тренер это не просто человек, который ходит и считает количество или просто контролирует технику – тренер это мотиватор!<br> Задача тренера сделать так, чтобы каждый человек который приходит к нему на тренировку
+                                        переходил в особое состояние драйва и энергии, которая увлекает его и физические нагрузки преодолевается с удовольствием и без труда. Тренер должен быть человеком передающим позитивную энергетику которая настолько
+                                        сильна, чтобы заряжать позитивом подопечных. Он должен быть энергетической пилюлей в момент плохого настроения, апатии, потери веры, после встречи с которым заряжаешься энергией для преодоления жизненных препятствий.
+                                        А целью тренировок может быть эмоциональная накрутка, тренировка качеств характера, подготовка себя к какому-то действию или приобретения внутреннего состояния решительности. <br>
                                     </li>
                                     <li>
-                                        Тренер дложен быть заинтересован в результате своего подопечного. Хороший тренер относится к достижениям своих спортсменов как к своим личным достижениям. Только при таком отношении к работе тренер будет разбиратся в причине и искать пути преодоления
-                                        препятствий, прокладывая путь к результату. </li>
-                                </ul>
+                                        Тренер дложен быть заинтересован в результате своего подопечного. Хороший тренер относится к достижениям своих спортсменов как к своим личным достижениям. Только при таком отношении к работе он будет разбиратся в причине и искать пути преодоления препятствий,
+                                        прокладывая путь к результату.
+                                    </li>
+                                </ol>
 
                             </p>
                         </div>
