--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                         Наблюдайте, как тренер проводит тренировки с другими людьми. На что обратить внимание:
                                         <ul>
                                             <li>-Тренер больше уделяет внимание своему телефону или своему клиенту?</li>
-                                            <li>-Уделяет ли внимание технике выполнения упражнений? <br> Иногда ошибки видны даже не имеющим отношение к спорту людям. См. видео</li>
+                                            <li>-Уделяет ли внимание технике выполнения упражнений? <br> Иногда ошибки видны даже не имеющим отношение к спорту людям.</li>
                                     </li>
                                     </ul>
                                     <li>Учитывайте, занимается ли тренер сам или нет, и если да, то каким спортом. Смотрите на его достижения. Поймите, скорее всего Ваш тренер будет вести Вас в том же направлении куда двигается сам. Если он сам не похож на
