--- a/index.html
+++ b/index.html
@@ -13,93 +13,48 @@
         <div class="white-block">
 
 
+<nav class="dws-menu">
+        <input type="checkbox" name="toggle" id="menu" class="toggleMenu">
+        <label for="menu" class="toggleMenu"></i>Меню</label>
 
 
+        <ul>
 
+            <li>
+                <a href="contacts.html"></i>Контакты</a>
+            </li>
 
-            <nav class="dws-menu">
-                <input type="checkbox" name="toggle" id="menu" class="toggleMenu">
-                <label for="menu" class="toggleMenu"></i>Меню</label>
-
-
+            <li>
+                <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
+                <a href="#"></i>Услуги</a>
+                <label for="sub_m2" class="toggleSubmenu"></i></label>
                 <ul>
+                    <li><a href="TRX.html">TRX - тренировки</a></li>
+                    <li><a href="men.html">Мужской тренинг</a></li>
+                    <li><a href="women.html">Тренировки для девушек</a></li>
+                    <li><a href="pt.home.html">Тренер на дом</a></li>
+                    <li><a href="lose weight.html">Похудеть</a></li>
+                    <li><a href="group">Групповые тренировки</a></li>
+                </ul>
+            </li>
 
-                    <li>
-                        <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
-                        <a href="#"></i>Услуги</a>
-                        <label for="sub_m2" class="toggleSubmenu"></i></label>
-                        <ul>
-                            <li><a href="TRX.html">TRX - тренировки</a></li>
-                            <li><a href="men.html">Мужской тренинг</a></li>
-                            <li><a href="women.html">Тренировки для девушек</a></li>
-                            <li><a href="pt.home.html">Тренер на дом</a></li>
-                            <li><a href="lose weight.html">Похудеть</a></li>
-                            <li><a href="group">Групповые тренировки</a></li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1">
-                        <a href="#"></i>Магазин</a>
-                        <label for="sub_m1" class="toggleSubmenu"></i></label>
-                        <ul>
+            <li>
+                <a href="lose weight.html">Похудеть</a>
+            </li>
+            <li>
+                <a href="about me.html"></i>О себе</a>
+            </li>
+            <li>
+                <a href="index.html"></i>Главная</a>
+            </li>
 
 
-                            <li>
-                                <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-2-1">
-                                <a href="#">Одежда</a>
-                                <label for="sub_m1-2-1" class="toggleSubmenu"></i></label>
-                                <ul>
-                                    <li><a href="for women">Для женщин</a></li>
-                                    <li><a href="for men">Для мужчин</a></li>
-                                    <li><a href="shoes">Обувь</a></li>
-                                </ul>
-                            </li>
+        </ul>
+    </nav>
 
 
-                            <li>
-                                <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-1">
-                                <a href="nutrition">Спортивное питание</a>
-                                <label for="sub_m1-1" class="toggleSubmenu"></i></label>
-                                <ul>
-                                    <li><a href="proteins">Протеины</a></li>
-                                    <li><a href="amino">Аминокислоты</a></li>
-                                    <li><a href="gainers">Гейнеры</a></li>
-                                    <li><a href="creatin">Креатин</a></li>
-                                    <li><a href="energetics">Енергетики</a></li>
-                                </ul>
-                            </li>
 
-
-                            <li>
-                                <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-2">
-                                <a href="#">Тренажеры</a>
-
-
-                                <label for="sub_m1-2" class="toggleSubmenu"></i></label>
-                                <ul>
-                                    <li><a href="equipment">Аксессуары</a></li>
-                                    <li><a href="equipment">Экипировка</a></li>
-                                    <li><a href="equipment">Гантели</a></li>
-                                    <li><a href="simulators">Тренажеры</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="partners.html"></i>Партнеры</a>
-                    </li>
-
-                    <li>
-                        <a href="contacts.html"></i>Контакты</a>
-                    </li>
-
-                    <li>
-                        <a href="index.html"></i>Главная</a>
-                    </li>
-
-            </nav>
+            
         </div>
         <div class="gray-block">
             <div class="name">ARKADIY_GYM</div>
