--- a/index.html
+++ b/index.html
@@ -13,47 +13,47 @@
         <div class="white-block">
 
 
-    <nav class="dws-menu">
-        <input type="checkbox" name="toggle" id="menu" class="toggleMenu">
-        <label for="menu" class="toggleMenu"></i>Меню</label>
 
 
-        <ul>
 
-            <li>
-                <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
-                <a href="#"></i>Услуги</a>
-                <label for="sub_m2" class="toggleSubmenu"></i></label>
+
+            <nav class="dws-menu">
+                <input type="checkbox" name="toggle" id="menu" class="toggleMenu">
+                <label for="menu" class="toggleMenu"></i>Меню</label>
+
+
                 <ul>
-                    <li><a href="TRX.html">TRX - тренировки</a></li>
-                    <li><a href="men.html">Мужской тренинг</a></li>
-                    <li><a href="women.html">Тренировки для девушек</a></li>
-                    <li><a href="pt.home.html">Тренер на дом</a></li>
-                    <li><a href="lose weight.html">Похудеть</a></li>
-                    <li><a href="group">Групповые тренировки</a></li>
+
+                    <li>
+                        <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m2">
+                        <a href="#"></i>Услуги</a>
+                        <label for="sub_m2" class="toggleSubmenu"></i></label>
+                        <ul>
+                            <li><a href="TRX.html">TRX - тренировки</a></li>
+                            <li><a href="men.html">Мужской тренинг</a></li>
+                            <li><a href="women.html">Тренировки для девушек</a></li>
+                            <li><a href="pt.home.html">Тренер на дом</a></li>
+                            <li><a href="lose weight.html">Похудеть</a></li>
+                            <li><a href="group">Групповые тренировки</a></li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <a href="lose weight.html">Похудеть</a>
+                    </li>
+                    <li>
+                        <a href="about me.html"></i>О себе</a>
+                    </li>
+                    <li>
+                        <a href="contacts.html"></i>Контакты</a>
+                    </li>
+                    <li>
+                        <a href="index.html"></i>Главная</a>
+                    </li>
+
+
                 </ul>
-            </li>
-
-            <li>
-                <a href="lose weight.html">Похудеть</a>
-            </li>
-            <li>
-                <a href="about me.html"></i>О себе</a>
-            </li>
-            <li>
-                <a href="contacts.html"></i>Контакты</a>
-            </li>
-            <li>
-                <a href="index.html"></i>Главная</a>
-            </li>
-
-
-        </ul>
-    </nav>
-
-
-
-            
+            </nav>
         </div>
         <div class="gray-block">
             <div class="name">ARKADIY_GYM</div>
@@ -66,7 +66,7 @@
     <div id="content">
 
         <div class="coach d-flex justify-content-around">
-            <img class="photo" src="img/4m.png" alt="персональный тренер Киев 0638587378">
+            <img class="photo" src="img/ohern.png" alt="персональный тренер Киев 0638587378">
             <!-- TODO after before pseudo elements -->
 
             <div class="kdb">
@@ -116,7 +116,7 @@
                                         Наблюдайте, как тренер проводит тренировки с другими людьми. На что обратить внимание:
                                         <ul>
                                             <li>-Тренер больше уделяет внимание своему телефону или своему клиенту?</li>
-                                            <li>-Уделяет ли внимание технике выполнения упражнений? <br> Иногда ошибки видны даже не имеющим отношение к спорту людям.</li>
+                                            <li>-Уделяет ли внимание технике выполнения упражнений? <br> Иногда ошибки видны даже не имеющим отношение к спорту людям. </li>
                                     </li>
                                     </ul>
                                     <li>Учитывайте, занимается ли тренер сам или нет, и если да, то каким спортом. Смотрите на его достижения. Поймите, скорее всего Ваш тренер будет вести Вас в том же направлении куда двигается сам. Если он сам не похож на
@@ -132,33 +132,18 @@
                                         прокладывая путь к результату.
                                     </li>
                                 </ol>
+                                <br>
+                                <p>Узнать условия тренировок с тренером Вы можете на стр
+                                    <a href="contacts.html"></i>Контакты</a>
+                                </p>
 
-                            </p>
+
+                                Учтите, занимаясь спортом Вы сохраняете здоровье, молодость, подвижность и внешнюю привлекательность – это те ресурсы которые Вы никогда не сможете купить за деньги, поэтому чем раньше Вы начнете – тем больше выиграете!
                         </div>
 
 
-                        <div class="myself">
-                            <h3>О себе:</h3>
-                            <p>Меня зовут Аркадий. Я занимаюсь спортом уже около 28-лет, а предоставляю услуги персонального фитнес тренера с 2005 года, сразу после получения диплома НТУУ КПИ «специалист по физической реабилитации». В моей тренерской карьере были перерывы
-                                связанные с переездами, травмами и даже профессиональным выгоранием, но я остаюсь и останусь в этой профессии потому что люблю процесс тренировок, общение с людьми разных профессий и жизненных взглядов, мне нравится что
-                                я выгляжу моложе своих лет, чувствую себя здоровым и подвижным, знаю как сберечь молодость и здоровье на более длительный период жизни. За время работы фитнес тренером я заметил, что спорт благотворно воздействует на эмоциональное
-                                состояние, состояние кожи, нормализует давление и уровень сахара в крови, на пищеварение, на осанку, на походку, на легкость в движениях, уверенность в собственных силах и привлекательность для окружающих. </p>
-                        </div>
 
-                        <div class="zal">
-                            <img class="photo-I_1" src="img/00334003_2.jpg" alt="персональный тренер Киев 0638587378">
-                            <img class="photo-I_2" src="img/crop_78782229_YMyp.jpg" alt="персональный тренер Киев 0638587378">
-                            <img class="photo-I_3" src="img/unnamed 700х700.jpg" alt="персональный тренер Киев 0638587378">
-                        </div>
-                        <p>Узнать условия тренировок с тренером Вы можете на стр
-                            <a href="contacts.html"></i>Контакты</a>
-                        </p>
-
-
-                        Учтите, занимаясь спортом Вы сохраняете здоровье, молодость, подвижность и внешнюю привлекательность – это те ресурсы которые Вы никогда не сможете купить за деньги, поэтому чем раньше Вы начнете – тем больше выиграете!
-                </p>
-
-                </div>
+                    </div>
             </div>
         </div>
     </div>
