--- a/about me.html
+++ b/about me.html
@@ -80,12 +80,12 @@
                         <div class="myself">
                             <h3>О себе:</h3>
                             <p>Меня зовут Аркадий. Я занимаюсь спортом уже около 28-лет. С начальных классов школы я занимался плаваньем. Этот вид спорта сильно повлиял на мое физическое развитие. Сразу после Чемпионата Украины по "подводному марафону" 03.06.2000,
-                                на котором я стал призером, получаю бытовую травму позвоночника. Диагноз "компрессионный перелом 1го грудного и 12го поясничного позвонков". Всвязи с травмой карьера плавца оборвалась и начался путь реабилитации. Развитая
+                                на котором я стал призером, получаю бытовую травму позвоночника. Диагноз "компрессионный перелом 12го грудного и 1го поясничного позвонков". Всвязи с травмой карьера плавца оборвалась и начался путь реабилитации. Развитая
                                 мускулатура кора позволила избежать использование поясничного корсета и для ее поддержания один из врачей порекомендовал силовые тренировки с отягощением.</p>
                             <br>
                             <p> Начал работать личным тренером в 2005м году, сразу после получения диплома НТУУ КПИ «специалист по физической реабилитации». В моей тренерской карьере были перерывы связанные с переездами, травмами и даже профессиональным выгоранием,
                                 но я остаюсь и останусь в этой профессии потому что люблю процесс тренировок, общение с людьми разных профессий и жизненных взглядов, мне нравится что я выгляжу моложе своих лет, чувствую себя здоровым и подвижным, знаю
-                                как сберечь молодость и здоровье на более длительный период жизни. За время работы фитнес тренером я заметил, что спорт благотворно воздействует на эмоциональное состояние, состояние кожи, нормализует давление и уровень
+                                как сберечь молодость и здоровье на более длительный период жизни. За время работы фитнес тренером я убедился, что спорт благотворно воздействует на эмоциональное состояние, состояние кожи, нормализует давление и уровень
                                 сахара в крови, на пищеварение, на осанку, на походку, на легкость в движениях, уверенность в собственных силах и привлекательность для окружающих. </p>
                         </div>
 
