--- a/about me.html
+++ b/about me.html
@@ -75,7 +75,7 @@
                 <div class="kdb">
 
                     <div class="myself">
-                        <h1>Персональный тренер</h1>
+                        <h1>Персональный тренер по бодибилдингу и фитнесу</h1>
 
                         <div class="myself">
                             <h3>О себе:</h3>
