--- a/lose weight.html
+++ b/lose weight.html
@@ -105,7 +105,9 @@
                                     <ol>-хлеб</ol>
                                     <ol>-быстроусваиваемые сорта риса</ol>
                                     <ol>-картофель</ol>
-                                    Так же стоит исключить сливочное и подсолнечное масла. Во время приготовления пищи смазывайте капните на сковороду несколько капель масла и разотрите, либо используйте пуливер.
+                                    <ol>-виноград, изюм</ol>
+                                    <ol>-цытрусовые (кроме грейпфрута - он наоборот сопутствует жиросжиганию)</ol>
+                                    Так же стоит исключить сливочное и подсолнечное масла. Замените эти масла на льняное и рыбий жир. Во время приготовления пищи смазывайте капните на сковороду несколько капель масла и разотрите, либо используйте пуливер.
                                 </li>
                             
                                 <li>4. Двигайтесь! Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощениями.</li>
