--- a/lose weight.html
+++ b/lose weight.html
@@ -107,7 +107,7 @@
                                     <ol>-картофель</ol>
                                     <ol>-виноград, изюм</ol>
                                     <ol>-цытрусовые (кроме грейпфрута - он наоборот сопутствует жиросжиганию)</ol>
-                                    Так же стоит исключить сливочное и подсолнечное масла. Замените эти масла на льняное и рыбий жир. Во время приготовления пищи смазывайте капните на сковороду несколько капель масла и разотрите, либо используйте пуливер.
+                                    Так же стоит исключить сливочное и подсолнечное масла. Замените эти масла на льняное и рыбий жир. Во время приготовления пищи капните на сковороду несколько капель масла на которм обычно готовите и разотрите, либо используйте пуливер чтоб снизить количество масла.
                                 </li>
                             
                                 <li>4. Двигайтесь! Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощениями.</li>
