--- a/lose weight.html
+++ b/lose weight.html
@@ -120,7 +120,7 @@
                     </div>
 
                     <p>Занимаясь спортом Вы забудете о проблеме лишнего веса. Спорт - это занятие для целеустремлённых и волевых людей, которые при трудностях идут на все что бы решить их, а не бросаются в рюмку или на кусок торта, в целях получить свою
-                        порцию удовольствия. Поймите, если Вам не нравится Ваша жизнь, если Вам не нравится Ваша внешность – это сигнал к действию! Примите вызов и сделайте первый шаг – придите в зал. Развивайте в себе жажду перемен. Научитесь терпеть,
+                        порцию удовольствия. Поймите, если Вам не нравится Ваша жизнь, если Вам не нравится Ваша внешность – это сигнал к действию! Примите вызов и сделайте первый шаг – придите в зал. Научитесь терпеть,
                         просто ждать и верить в результат! Тело будет сопротивляться, оно привыкло валяться на диване или сидеть в ресторане, но Ваша задача упорно двигаться вперёд! Когда пройдёт первый месяц, Вы увидите свои первые изменения, тело начнёт
                         поддаваться Вашим усилиям и терпению, это заметят друзья и родные. Когда пройдёт год, Вы просто не будете понимать, как раньше жили без этого, Вы влюбитесь в себя, в свой новый образ и ощущения лёгкости в жизни.</p>
 
