--- a/lose weight.html
+++ b/lose weight.html
@@ -103,9 +103,9 @@
                                     Так же стоит исключить сливочное и подсолнечное масла. Замените эти масла на льняное и рыбий жир. Во время приготовления пищи капните на сковороду несколько капель масла на которм обычно готовите и разотрите, либо используйте пуливер чтоб снизить количество масла.
                                 </li>
                             
-                                <li>3. Умножте свой вес в киллограммах на 23. Например, если Вы весите 90кг, то 90х23=2070ккал. Это нижний предел,опускаться ниже которого не стоит.<br>
-А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел, выше которого подниматься не стоит.<br>
-Промежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете, а по мере снижения веса периодически необходимо делать новые подсчеты.<br>
+                                <li>3. <ol>Умножте свой вес в киллограммах на 23. Например, если Вы весите 90кг, то 90х23=2070ккал. Это нижний предел,опускаться ниже которого не стоит.</ol>
+<ol>А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел,  поднимаясь выше Вы не похудеете.</ol>
+<ol>ромежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете, а по мере снижения веса периодически необходимо делать новые подсчеты.</ol>
 Калорийность каждого продукта обычно написана на упаковке. Так же калорийность каждого ингредиента легко можно найти в интернете. Таким образом не сложно подсчитать суточную калорийность.
 
 
