--- a/lose weight.html
+++ b/lose weight.html
@@ -106,7 +106,7 @@
                                 <li>3. <ol>Умножте свой вес в киллограммах на 23. Например, если Вы весите 90кг, то 90х23=2070ккал. Это нижний предел,опускаться ниже которого не стоит.</ol>
 <ol>А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел,  поднимаясь выше Вы не похудеете.</ol>
 <ol>ромежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете, а по мере снижения веса периодически необходимо делать новые подсчеты.</ol>
-Калорийность каждого продукта обычно написана на упаковке. Так же калорийность каждого ингредиента легко можно найти в интернете. Таким образом не сложно подсчитать суточную калорийность.
+Калорийность каждого продукта обычно написана на упаковке. Так же, калорийность каждого ингредиента легко можно найти в интернете. Таким образом не сложно подсчитать суточную калорийность.
 
 
 Если Вы будете выполнятять рекомендацию описанную в 3 пункте - то можно обойтись даже без ранее описанных пунктов. Правда выполняя все рекомендации результат вы увидите раньше и он Вам понравится больше.<br>
